HOP-3202 Code cleanup and Sonar issues